--- a/demoMaven/pom.xml
+++ b/demoMaven/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ajc.formation.alten</groupId>
-  <artifactId>demoMaven</artifactId>
+  <artifactId>demon</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>demoMaven</name>
+  <name>demon</name>
   <properties>
   	<maven.compiler.source>15</maven.compiler.source>
   	<maven.compiler.target>15</maven.compiler.target>
